tests/baselines/reference/jsFileCompilationTypeArgumentSyntaxOfCall.errors.txt
tests/cases/compiler/a.js(1,5): error TS8011: 'type arguments' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    Foo<number>();
        ~~~~~~
!!! error TS8011: 'type arguments' can only be used in a .ts file.